<resources>
    <string name="app_name">CollapsingToolbarDemo</string>
    <string name="action_settings">Settings</string>

    <string name="transition_name_name">transition:NAME</string>
    <string name="transition_name_circle">transition:CIRCLE</string>

    <string name="transition_grocery_store">StoreName</string>
    <string name="transition_delivery_image">DeliveryImage</string>
    <string name="transition_delivery_text">DeliveryText</string>
    <string name="transition_product_image">ProductImage</string>
    <string name="transition_product_text">ProductText</string>
    <string name="transition_offer_image">OfferImage</string>
    <string name="transition_offer_text">OfferText</string>
    <string name="transition_rate_image">RateImage</string>
    <string name="transition_rate_text">RateText</string>
    <string name="CardView">TransitionCard</string>
</resources>
