<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/tools">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
        android:background="@color/colorPrimary"
        android:title="Collapsing Toolbar"
        app:layout_collapseMode="pin" />

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        card_view:cardCornerRadius="2dp"
        card_view:cardPreventCornerOverlap="false"
        android:transitionName="@string/CardView"
        card_view:contentPadding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp"
            android:transitionName="@string/transition_grocery_store">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/store_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:padding="2dp"
                    android:text="Grocery Mart - Gandhingar"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="13dp"
                    android:layout_height="13dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/star_img"
                    android:padding="2dp"
                    android:transitionName="@string/transition_rate_image" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="4.2"
                    android:transitionName="@string/transition_rate_text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="13dp"
                    android:layout_height="13dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="4dp"
                    android:background="@drawable/delivery_img"
                    android:padding="2dp"
                    android:transitionName="@string/transition_delivery_image" />

                <TextView
                    android:id="@+id/delivery_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:padding="2dp"
                    android:text="Delivery in 2 hrs 30 min"
                    android:transitionName="@string/transition_delivery_text" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="13dp"
                    android:layout_height="13dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="4dp"
                    android:background="@drawable/products_img"
                    android:padding="2dp"
                    android:transitionName="@string/transition_product_image" />

                <TextView
                    android:id="@+id/product_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:padding="2dp"
                    android:text="1350 products to choose from"
                    android:transitionName="@string/transition_product_text" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/offer_image"
                    android:layout_width="13dp"
                    android:layout_height="13dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="4dp"
                    android:background="@drawable/pickup_img"
                    android:padding="2dp"
                    android:transitionName="@string/transition_offer_image" />

                <TextView
                    android:id="@+id/offer_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:padding="2dp"
                    android:text="Free deliveryTime above ₹250"
                    android:transitionName="@string/transition_offer_text" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>